--- a/index.html
+++ b/index.html
@@ -148,19 +148,19 @@
   <p class="mt-6">In the context of sports, program sections typically refer to distinct components,<br> phases, or elements within a training or competition regimen.</p>
  </div>
  <div class="flex justify-center items-center gap-6 mt-12 flex-col md:flex-row">
-  <div class="bg-[linear-gradient(45deg,rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url(' /Images/2.Png')] h-[340px] w-[350px] lg:h-[340px] lg:w-[573px] bg-no-repeat rounded-lg py-24 px-10">
+  <div class="bg-[linear-gradient(45deg,rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url('./Images/2.Png')] h-[340px] w-[350px] lg:h-[340px] lg:w-[573px] bg-no-repeat rounded-lg py-24 px-10">
        <h class="text-2xl font-semibold text-white">Junior Program</h>
        <p class="text-xs text-white mt-4">A junior program in the context of sports or other<br> activities is a structured initiative specifically designed<br> for young participants, typically children and teenagers.</p>
        <button class="btn btn-error mt-8 text-white">Register Now!</button>
   </div>
-  <div class="bg-[linear-gradient(45deg,rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url('/Images/3.Png')] h-[340px] w-[350px] lg:h-[340px] lg:w-[573px] bg-no-repeat rounded-lg py-24 px-10">
+  <div class="bg-[linear-gradient(45deg,rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url('./Images/3.Png')] h-[340px] w-[350px] lg:h-[340px] lg:w-[573px] bg-no-repeat rounded-lg py-24 px-10">
     <h class="text-2xl font-semibold text-white">Teenager Program</h>
     <p class="text-xs text-white mt-4">A teenager program is a structured and purposeful initiative designed <br>to cater to the unique needs, interests, and developmental stages<br> of adolescentshese programs are diverse and can span </p>
     <button class="btn btn-error text-white mt-8">Register Now!</button>
   </div>
  </div>
 <div class="flex justify-center items-center">
-  <div class="bg-[linear-gradient(45deg,rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url('/Images/4.Png')]  h-[350px] w-[1170px] bg-no-repeat rounded-lg  px-10 py-36 mt-6">
+  <div class="bg-[linear-gradient(45deg,rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url('./Images/4.Png')]  h-[350px] w-[1170px] bg-no-repeat rounded-lg  px-10 py-36 mt-6">
     <h class="text-2xl font-semibold text-white">Professional Program</h>
     <p class="text-xs text-white mt-4">A professional program typically refers to a structured and specialized course of<br> study or training designed to prepare individuals<br> for a specific career or field of expertise.  </p>
     <button class="btn btn-error text-white mt-8">Register Now!</button>
