added social media file

--- a/index.html
+++ b/index.html
@@ -501,7 +501,17 @@
 
     </div>
    </div>
+   <div class="bg-[#13131808] mt-[48px] py-8">
+    <h4 class="text-2xl font-semibold text-center">Social Media</h4>
+      <div class=" mt-[24px] flex justify-center items-center gap-7">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-github"></i>
+      </div>
    
+
+   </div>
 
 
   </main>
