--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
        
       </div>
-      <div class="navbar-start"><a class="font-manrope font-bold text-4xl">Hockey<span class="text-orange-400">’</span>s</a></div>
+      <div class="navbar-start mr-16"><a class="font-manrope font-bold text-4xl">Hockey<span class="text-orange-400">’</span>s</a></div>
       <div class="navbar-center hidden lg:flex">
         <ul class="menu text-base menu-horizontal px-1 gap-[44px]">
            <a href=""><span class="text-[#FF4240]">Home</span></a>
@@ -70,7 +70,7 @@
       </div>
       <div class="navbar-end gap-4">
        <ul class="text-black  hidden lg:block"><i class="fa-solid fa-magnifying-glass"></i></ul>
-       <a class="btn btn-error text-white">Get Ticket</a>
+       <button class=" btn btn-error">Get Ticket</button> 
        
       </div>
     </div>
@@ -151,19 +151,19 @@
   <div class="bg-[linear-gradient(45deg,rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url('./images/2.png')] h-[340px] w-[350px] lg:h-[340px] lg:w-[573px] bg-no-repeat rounded-lg py-24 px-10">
        <h class="text-2xl font-semibold text-white">Junior Program</h>
        <p class="text-xs text-white mt-4">A junior program in the context of sports or other<br> activities is a structured initiative specifically designed<br> for young participants, typically children and teenagers.</p>
-       <button class="btn btn-error mt-8 text-white">Register Now!</button>
+       <button class="bg-red-500 text-white px-5 py-4 rounded-lg mt-8">Register Now!</button>
   </div>
   <div class="bg-[linear-gradient(45deg,rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url('./images/3.png')] h-[340px] w-[350px] lg:h-[340px] lg:w-[573px] bg-no-repeat rounded-lg py-24 px-10">
     <h class="text-2xl font-semibold text-white">Teenager Program</h>
     <p class="text-xs text-white mt-4">A teenager program is a structured and purposeful initiative designed <br>to cater to the unique needs, interests, and developmental stages<br> of adolescentshese programs are diverse and can span </p>
-    <button class="btn btn-error text-white mt-8">Register Now!</button>
+    <button class="bg-red-500 text-white px-5 py-4 rounded-lg mt-8">Register Now!</button>
   </div>
  </div>
 <div class="flex justify-center items-center">
   <div class="bg-[linear-gradient(45deg,rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url('./images/4.png')]  h-[350px] w-[1170px] bg-no-repeat rounded-lg  px-10 py-36 mt-6">
     <h class="text-2xl font-semibold text-white">Professional Program</h>
     <p class="text-xs text-white mt-4">A professional program typically refers to a structured and specialized course of<br> study or training designed to prepare individuals<br> for a specific career or field of expertise.  </p>
-    <button class="btn btn-error text-white mt-8">Register Now!</button>
+    <button class="bg-red-500 text-white px-5 py-4 rounded-lg mt-8">Register Now!</button>
 </div>
 
 </div>
@@ -196,8 +196,8 @@
             <p>200</p>
           </div>
         </div>
-        <h2 class="card-title font-bold text-2xl">World Cup Flags Football</h2>
-        <p>A quadrennial spectacle of<br> football excellence</p>
+        <h2 class="card-title font-bold text-2xl">Jacket for Hockeys</h2>
+        <p>Original Penguin Track Jacket<br> Contrast Piping in hockeys</p>
         <div class="card-actions flex gap-5 mt-4 ">
           <div class="text-orange-600 font-semibold">Price - $22.00</div>
           <div class=" flex justify-center items-center gap-2">
@@ -228,8 +228,8 @@
             <p>200</p>
           </div>
         </div>
-        <h2 class="card-title font-bold text-2xl">World Cup Flags Football</h2>
-        <p>A quadrennial spectacle of<br> football excellence</p>
+        <h2 class="card-title font-bold text-2xl">Volleyball for Worldcup</h2>
+        <p>Canada Dad Hat Maple Leaf <br> Flag Cap Embroidered Unisex</p>
         <div class="card-actions flex gap-5 mt-4 ">
           <div class="text-orange-600 font-semibold">Price - $22.00</div>
           <div class=" flex justify-center items-center gap-2">
@@ -260,8 +260,8 @@
             <p>200</p>
           </div>
         </div>
-        <h2 class="card-title font-bold text-2xl">World Cup Flags Football</h2>
-        <p>A quadrennial spectacle of<br> football excellence</p>
+        <h2 class="card-title font-bold text-2xl">Cap For Hockeys</h2>
+        <p>Canada Dad Hat Maple Leaf <br> Flag Cap Embroidered Unisex</p>
         <div class="card-actions flex gap-5 mt-4 ">
           <div class="text-orange-600 font-semibold">Price - $22.00</div>
           <div class=" flex justify-center items-center gap-2">
@@ -292,8 +292,8 @@
             <p>200</p>
           </div>
         </div>
-        <h2 class="card-title font-bold text-2xl">World Cup Flags Football</h2>
-        <p>A quadrennial spectacle of<br> football excellence</p>
+        <h2 class="card-title font-bold text-2xl">Jersey For Hockeys</h2>
+        <p>owayo manufactures custom hockey<br> jerseys of professional quality</p>
         <div class="card-actions flex gap-5 mt-4 ">
           <div class="text-orange-600 font-semibold">Price - $22.00</div>
           <div class=" flex justify-center items-center gap-2">
@@ -324,8 +324,8 @@
             <p>200</p>
           </div>
         </div>
-        <h2 class="card-title font-bold text-2xl">World Cup Flags Football</h2>
-        <p>A quadrennial spectacle of<br> football excellence</p>
+        <h2 class="card-title font-bold text-2xl">Helmet for Hockeys</h2>
+        <p>CCM 3DS Helmet Combo features an adjust</p>
         <div class="card-actions flex gap-5 mt-4 ">
           <div class="text-orange-600 font-semibold">Price - $22.00</div>
           <div class=" flex justify-center items-center gap-2">
@@ -497,7 +497,7 @@
           <h4 class="font-semibold text-xl">Message</h4>
           <input class="bg-[#13131808] pl-5 lg:pr-[505px] pt-5 lg:pb-[327px] pr-[167px] pb-[157px]  rounded-[12px] mt-4" type="text" placeholder="Write your message">
          </div>
-         <button class="btn btn-error  w-full mt-[47px]">Send Message</button>
+         <button class="bg-red-500 text-white px-5 py-4 rounded-lg  w-full mt-[47px]">Send Message</button>
 
     </div>
    </div>
@@ -516,6 +516,49 @@
 
   </main>
   <footer>
+    <footer class="footer grid-rows-2 p-10 bg-neutral text-neutral-content">
+      <nav>
+        <header class="footer-title">Services</header> 
+        <a class="link link-hover">Branding</a>
+        <a class="link link-hover">Design</a>
+        <a class="link link-hover">Marketing</a>
+        <a class="link link-hover">Advertisement</a>
+      </nav> 
+      <nav>
+        <header class="footer-title">Company</header> 
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </nav> 
+      <nav>
+        <header class="footer-title">Legal</header> 
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </nav> 
+      <nav>
+        <header class="footer-title">Social</header> 
+        <a class="link link-hover">Twitter</a>
+        <a class="link link-hover">Instagram</a>
+        <a class="link link-hover">Facebook</a>
+        <a class="link link-hover">Github</a>
+      </nav> 
+      <nav>
+        <header class="footer-title">Explore</header> 
+        <a class="link link-hover">Features</a>
+        <a class="link link-hover">Enterprise</a>
+        <a class="link link-hover">Security</a>
+        <a class="link link-hover">Pricing</a>
+      </nav> 
+      <nav>
+        <header class="footer-title">Apps</header> 
+        <a class="link link-hover">Mac</a>
+        <a class="link link-hover">Windows</a>
+        <a class="link link-hover">iPhone</a>
+        <a class="link link-hover">Android</a>
+      </nav>
+    </footer>
 
   </footer>
 </body>
