--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
           </div>
           <div>
             <h4 class="font-semibold text-xl">Your Email</h4>
-            <input class="bg-[#13131808] py-5 pl-5 pr-[150px] rounded-[12px] mt-4" type="text" placeholder="Enter your email">
+            <input class="bg-[#13131808]  py-5 border border-none pl-5 pr-[150px] rounded-[12px] mt-4" type="text" placeholder="Enter your email">
           </div>
 
          </div>
@@ -495,7 +495,7 @@
          </div>
          <div class="mt-6">
           <h4 class="font-semibold text-xl">Message</h4>
-          <input class="bg-[#13131808] pl-5 lg:pr-[505px] pt-5 lg:pb-[327px] pr-[167px] pb-[157px]  rounded-[12px] mt-4" type="text" placeholder="Write your message">
+          <input class="bg-[#13131808] pl-5 pt-5 lg:pb-[327px] pb-[157px] rounded-[12px] mt-4 w-full" type="text" placeholder="Write your message">
          </div>
          <button class="bg-red-500 text-white px-5 py-4 rounded-lg  w-full mt-[47px]">Send Message</button>
 
@@ -515,50 +515,51 @@
 
 
   </main>
-  <footer>
-    <footer class="footer grid-rows-2 p-10 bg-neutral text-neutral-content">
-      <nav>
-        <header class="footer-title">Services</header> 
-        <a class="link link-hover">Branding</a>
-        <a class="link link-hover">Design</a>
-        <a class="link link-hover">Marketing</a>
-        <a class="link link-hover">Advertisement</a>
-      </nav> 
-      <nav>
-        <header class="footer-title">Company</header> 
-        <a class="link link-hover">About us</a>
-        <a class="link link-hover">Contact</a>
-        <a class="link link-hover">Jobs</a>
-        <a class="link link-hover">Press kit</a>
-      </nav> 
-      <nav>
-        <header class="footer-title">Legal</header> 
-        <a class="link link-hover">Terms of use</a>
-        <a class="link link-hover">Privacy policy</a>
-        <a class="link link-hover">Cookie policy</a>
-      </nav> 
-      <nav>
-        <header class="footer-title">Social</header> 
-        <a class="link link-hover">Twitter</a>
-        <a class="link link-hover">Instagram</a>
-        <a class="link link-hover">Facebook</a>
-        <a class="link link-hover">Github</a>
-      </nav> 
-      <nav>
-        <header class="footer-title">Explore</header> 
-        <a class="link link-hover">Features</a>
-        <a class="link link-hover">Enterprise</a>
-        <a class="link link-hover">Security</a>
-        <a class="link link-hover">Pricing</a>
-      </nav> 
-      <nav>
-        <header class="footer-title">Apps</header> 
-        <a class="link link-hover">Mac</a>
-        <a class="link link-hover">Windows</a>
-        <a class="link link-hover">iPhone</a>
-        <a class="link link-hover">Android</a>
-      </nav>
-    </footer>
+  <footer class="bg-black mx-auto">
+    <div class="grid grid-cols-1 md:grid-cols-3 place-items-center gap-[100px] px-[40px] py-[40px]  lg:py-[100px] lg:px-[105px] mt-[100px] ">
+       <div class="">
+          <header class="text-3xl text-white">Get In Touch</header>
+          <p class="text-[#FFFFFF99] mt-4">Feel free to reach out to us anytime.<br> Whether you have questions, feedback, or just want to say hello,<br> we'd love to hear from you.</p>
+          <div class="flex gap-4 mt-6">
+          <a class="text-orange-600"><i class="fa-regular fa-envelope"></i></a>  
+          <p class="text-[#FFFFFF99]">hockeys@support.com</p> 
+          </div>
+          <div class="flex gap-4 mt-5">
+          <a class="text-orange-600"><i class="fa-solid fa-phone"></i></a>  
+          <p class="text-[#FFFFFF99]">(+62) 123-321-543</p> 
+          </div>
+       </div>
+
+       <!-- 2nd section -->
+       <div class="grid gap-20 md:gap-60 grid-cols-2 ">
+       <div class="grid">
+        <h3 class=" text-white">Company</h3> 
+        <a class="link link-hover mt-7 text-[#FFFFFF99]">About us</a>
+        <a class="link link-hover text-[#FFFFFF99]">Leadership</a>
+        <a class="link link-hover text-[#FFFFFF99]">Careers</a>
+        <a class="link link-hover text-[#FFFFFF99]">News & Article</a>
+        <a class="link link-hover text-[#FFFFFF99]">Notice</a>
+       </div>
+       <!-- 3rd -->
+       <div class="grid"> <header class=" text-white">Support</header> 
+        <a class="link link-hover mt-7 text-[#FFFFFF99]">Help Center</a>
+        <a class="link link-hover text-[#FFFFFF99]">FAQ</a>
+        <a class="link link-hover text-[#FFFFFF99]"> support</a>
+        <a class="link link-hover text-[#FFFFFF99]">Contact</a>
+      </div>
+    </div>
+      <!-- 4th -->
+      <div class="grid">
+        <header class="text-center text-white">Services</header> 
+        <a class="text-center link link-hover mt-7 text-[#FFFFFF99]">Academy</a>
+        <a class="text-center link link-hover text-[#FFFFFF99]">Group Lesson</a>
+        <a class="text-center link link-hover text-[#FFFFFF99]">Private Lesson</a>
+        <a class="text-center link link-hover text-[#FFFFFF99]">Hockeys for kids</a>
+        <a class="text-center link link-hover text-[#FFFFFF99]">Hockeys for Adult</a>
+      </div>
+      
+    </div>
+    
 
   </footer>
 </body>
