added new text file

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="navbar-start mr-16 lg:mr-20"><a class="font-manrope font-bold text-2xl lg:text-4xl">Hockey<span class="text-orange-400">’</span>s</a></div>
       <div class="navbar-center hidden lg:flex">
         <ul class="menu text-base menu-horizontal px-1 gap-[44px]">
-           <a href=""><span class="text-[#FF4240]">Home</span></a>
+           <a href=""><span class="text-[#FF4240] font-semibold">Home</span></a>
            <a href="">About</a>
            <a href="">Pages</a>
            <a href="">Blog</a>
